# nody

./: .gitignore  README.md
.cursor/rules/: general.mdc  letta.mdc
backend/: None  REFACTORING_SUMMARY.md  agent.py  code_generation.py  config.py  database.py  example_use_canvasdb.py  main.py  metadata_tools.py  models.py  onboarding.py  pyproject.toml  requirements.txt  sync_canvas_to_chromadb.py  tools.py  utils.py  workspace.py
backend/agents/: __init__.py  file_system_agent.py  node_generation_agent.py
backend/class/: terminal_executor.py  workspace_manager.py
backend/db/: __init__.py  canvas_db.py  db.py
canvas/: metadata.json
canvas/files/: main.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/projects/: route.ts
frontend/app/onboarding/: page.tsx  page_backup.txt
frontend/app/p/[projectName]/: page.tsx
frontend/components/: bottom-dock.tsx  canvas.tsx  code-editor.tsx  edge-creation-modal.tsx  endpoint-generation-modal.tsx  file-naming-modal.tsx  folder-naming-modal.tsx  left-sidebar-inspector.tsx  left-sidebar.tsx  node-configuration-modal.tsx  node.tsx  rays-background.tsx  right-sidebar.tsx  template-selection-modal.tsx  top-nav.tsx
frontend/components/canvas/edge-components/: index.ts
frontend/components/canvas/hooks/: index.ts  useCanvasData.ts  useModalState.ts
frontend/components/canvas/node-components/: FileNode.tsx  FolderNode.tsx  GenericNode.tsx  NodeHandles.tsx  index.ts
frontend/components/canvas/utils/: index.ts  (+2 more)
frontend/lib/: api.ts
scripts/: run_app.sh
(+1 files in other folders)
