[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "chromadb>=1.2.1",
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "httpx>=0.27.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
